[gd_scene load_steps=17 format=3 uid="uid://b5d8gkjyrc4yn"]

[ext_resource type="Script" path="res://scenes/trade_screen.gd" id="1_ixb2b"]
[ext_resource type="Texture2D" uid="uid://38qd58n3acbb" path="res://assets/textures/talkwindow.png" id="2_4aej3"]
[ext_resource type="FontFile" uid="uid://cave61j52xeuh" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="3_kn1xy"]
[ext_resource type="StyleBox" uid="uid://bmyh6yvafukya" path="res://assets/button_style.tres" id="4_ahejk"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesomeButton.gd" id="5_114mb"]
[ext_resource type="StyleBox" uid="uid://ml3osqlkwitw" path="res://assets/tabs_tab_style.tres" id="6_1uk07"]
[ext_resource type="StyleBox" uid="uid://p34djr2fcs3w" path="res://assets/tabs_list_style.tres" id="7_322xj"]
[ext_resource type="Material" uid="uid://k5r36wixdaow" path="res://assets/materials/misc/dark.tres" id="8_qg3ut"]
[ext_resource type="PackedScene" uid="uid://dytjnya7i6c47" path="res://scenes/dialogs/select_quantity_dialog.tscn" id="9_a2hjl"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_825ag"]
texture = ExtResource("2_4aej3")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4plc"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="LabelSettings" id="LabelSettings_gicgb"]
font_size = 34

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cq1op"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.2, 0.364706, 0.486275, 0.792157)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6qyf"]
content_margin_top = 4.0
bg_color = Color(0, 0, 0, 0.188235)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Environment" id="Environment_f1hi3"]
background_mode = 1
background_color = Color(1, 1, 1, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="World3D" id="World3D_tt1eo"]
environment = SubResource("Environment_f1hi3")

[node name="InventoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -350.0
offset_right = 316.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ixb2b")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_825ag")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q4plc")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_right = -18.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="MarginContainer" parent="Content"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Content/Top"]
layout_mode = 2

[node name="Control" type="Control" parent="Content/Top/HBoxContainer"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Content/Top/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "Trading"
label_settings = SubResource("LabelSettings_gicgb")
horizontal_alignment = 1

[node name="ButtonBack" type="Button" parent="Content/Top/HBoxContainer"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_kn1xy")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("4_ahejk")
theme_override_styles/hover = ExtResource("4_ahejk")
theme_override_styles/pressed = ExtResource("4_ahejk")
theme_override_styles/disabled = ExtResource("4_ahejk")
theme_override_styles/focus = ExtResource("4_ahejk")
text = ""
script = ExtResource("5_114mb")
icon_size = 32
icon_name = "xmark"

[node name="Body" type="MarginContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 34
theme_override_constants/margin_bottom = 20

[node name="Content" type="HBoxContainer" parent="Content/Body"]
layout_mode = 2

[node name="Tabs" type="TabContainer" parent="Content/Body/Content"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_hovered_color = Color(1, 1, 0, 1)
theme_override_colors/font_unselected_color = Color(0.564706, 0.564706, 0.564706, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_styles/tab_selected = ExtResource("6_1uk07")
theme_override_styles/tab_hovered = ExtResource("6_1uk07")
theme_override_styles/tab_unselected = ExtResource("6_1uk07")
theme_override_styles/tab_disabled = ExtResource("6_1uk07")

[node name="Tools" type="Control" parent="Content/Body/Content/Tabs"]
layout_mode = 2

[node name="List" type="ItemList" parent="Content/Body/Content/Tabs/Tools"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("7_322xj")

[node name="Clothes" type="Control" parent="Content/Body/Content/Tabs"]
visible = false
layout_mode = 2

[node name="List" type="ItemList" parent="Content/Body/Content/Tabs/Clothes"]
layout_mode = 2
offset_left = -250.0
offset_right = 250.0
theme_override_styles/panel = ExtResource("7_322xj")

[node name="Consumables" type="Control" parent="Content/Body/Content/Tabs"]
visible = false
layout_mode = 2

[node name="List" type="ItemList" parent="Content/Body/Content/Tabs/Consumables"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("7_322xj")

[node name="Miscellaneous" type="Control" parent="Content/Body/Content/Tabs"]
visible = false
layout_mode = 2

[node name="List" type="ItemList" parent="Content/Body/Content/Tabs/Miscellaneous"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("7_322xj")

[node name="Quests" type="Control" parent="Content/Body/Content/Tabs"]
visible = false
layout_mode = 2

[node name="List" type="ItemList" parent="Content/Body/Content/Tabs/Quests"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("7_322xj")

[node name="PanelItem" type="PanelContainer" parent="Content/Body/Content"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cq1op")

[node name="Content" type="VBoxContainer" parent="Content/Body/Content/PanelItem"]
visible = false
layout_mode = 2

[node name="Title" type="Label" parent="Content/Body/Content/PanelItem/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_k6qyf")
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelWeight" type="Label" parent="Content/Body/Content/PanelItem/Content"]
layout_mode = 2
text = "Weigth :"

[node name="LabelPrice" type="Label" parent="Content/Body/Content/PanelItem/Content"]
layout_mode = 2
text = "Unit price :"

[node name="ViewContent" type="SubViewportContainer" parent="Content/Body/Content/PanelItem/Content"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="3DView" type="SubViewport" parent="Content/Body/Content/PanelItem/Content/ViewContent"]
own_world_3d = true
world_3d = SubResource("World3D_tt1eo")
transparent_bg = true
handle_input_locally = false
size = Vector2i(496, 247)
render_target_update_mode = 0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Content/Body/Content/PanelItem/Content/ViewContent/3DView"]
transform = Transform3D(1, -8.35189e-23, -4.37114e-08, 4.37114e-08, 1.91069e-15, 1, 0, -1, 1.91069e-15, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="Content/Body/Content/PanelItem/Content/ViewContent/3DView"]
transform = Transform3D(1, 0, -4.37114e-08, 4.37114e-08, 1.91069e-15, 1, 0, -1, 1.91069e-15, 0, 1, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="Content/Body/Content/PanelItem/Content/ViewContent/3DView"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.05133, 0)
visible = false
size = Vector3(100, 0.1, 100)
material = ExtResource("8_qg3ut")

[node name="InsertPoint" type="Node3D" parent="Content/Body/Content/PanelItem/Content/ViewContent/3DView"]
transform = Transform3D(0.866025, -0.5, 0, 0.433013, 0.75, 0.5, -0.25, -0.433013, 0.866025, 0, 0, 0)

[node name="Actions" type="HBoxContainer" parent="Content/Body/Content/PanelItem/Content"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Buy" type="Button" parent="Content/Body/Content/PanelItem/Content/Actions"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("3_kn1xy")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("4_ahejk")
theme_override_styles/hover = ExtResource("4_ahejk")
theme_override_styles/pressed = ExtResource("4_ahejk")
theme_override_styles/disabled = ExtResource("4_ahejk")
theme_override_styles/focus = ExtResource("4_ahejk")
text = ""
script = ExtResource("5_114mb")
icon_size = 32
icon_name = "coins"

[node name="SelectQuantityDialog" parent="." instance=ExtResource("9_a2hjl")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Content/Top/HBoxContainer/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="tab_changed" from="Content/Body/Content/Tabs" to="." method="_on_tabs_tab_changed"]
[connection signal="tab_selected" from="Content/Body/Content/Tabs" to="." method="_on_tabs_tab_selected"]
[connection signal="item_selected" from="Content/Body/Content/Tabs/Tools/List" to="." method="_on_list_tools_item_selected"]
[connection signal="item_selected" from="Content/Body/Content/Tabs/Clothes/List" to="." method="_on_list_item_clothe_selected"]
[connection signal="item_selected" from="Content/Body/Content/Tabs/Consumables/List" to="." method="_on_list_item_consumable_selected"]
[connection signal="item_selected" from="Content/Body/Content/Tabs/Miscellaneous/List" to="." method="_on_list_miscellaneous_item_selected"]
[connection signal="item_selected" from="Content/Body/Content/Tabs/Quests/List" to="." method="_on_list_item_quest_selected"]
[connection signal="quantity" from="SelectQuantityDialog" to="." method="_drop"]
